[Improve][E2E] Copy Maven dependencies into E2E containers